<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context=".UI.RecipeStepsActivity">

    <FrameLayout
        android:id="@+id/recipe_steps_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

</LinearLayout>
