<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

<androidx.recyclerview.widget.RecyclerView

    android:id="@+id/ingredient_detail_recyclerview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:divider="?android:attr/dividerHorizontal"
    android:showDividers="middle"
    tools:context=".UI.RecipeStepsActivity"
    tools:listitem="@layout/recipe_steps_short_desc"/>

    <Button
        android:id="@+id/add_to_widget_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:layout_gravity="center"
        android:text="@string/addToWidgetButton"
        android:background="@color/colorAccent"
        android:layout_margin="16dp"/>

    </LinearLayout>
</ScrollView>
