<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.example.android.bakingmadeeasy.UI.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<androidx.recyclerview.widget.RecyclerView
    android:id="@+id/main_recipe_recycler"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:scrollbars="vertical" />

    <!-- Empty view is only visible when the grid has no items. -->
    <TextView
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/no_recipes_found"
        android:textColor="@color/primary_text"
        style="?android:attr/textAppearanceLarge"
        android:visibility="gone"/>

    <!-- Loading indicator is only shown before the first load -->
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loading_spinner"
        android:layout_gravity="center"
        android:indeterminate="true"
        android:visibility="invisible"
        style="@style/Widget.AppCompat.ProgressBar"/>

</LinearLayout>
